added example for EPS and recurring payment

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -18,9 +18,11 @@
 
     <div class="row" style="text-align:center; margin-top: 10px">
         <div class="col-12">
-            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-embedded')">EMBEDDED WPP</button>
-            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-standalone')">STANDALONE WPP</button>
+            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-embedded')">EMBEDDED CC WPP</button>
+            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-eps-embedded')">EMBEDDED EPS WPP</button>
+            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-standalone')">STANDALONE CC WPP</button>
             <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-seamless-render')">SEAMLESS RENDER WPP</button>
+            <button type="button" class="col-4 btn btn-primary" onclick="clientApi.pay('wpp-recur-submit')">RECUR CC PAYMENT</button>
         </div>
     </div>
 
